<resources>
    <string name="app_name">App-Capstone</string>
    <string name="app_name_image">App name image</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="action_login_short">Login</string>
    <string name="action_register">Register</string>
    <string name="not_a_user_register">Not a user? Register here</string>
    <string name="already_registered_login">Already registered? Login here</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="top_navigation_panel">Top navigation panel</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="current_offers_text">Current Offers</string>
    <string name="all_products_text">All Products</string>
    <string name="email_empty">Please enter a valid email</string>
    <string name="password_empty">Please enter a valid password</string>
    <string name="password_short">Please enter a password longer than 6 characters</string>
    <string name="passwords_not_matched">Passwords do not match!</string>
    <string name="product_detail_title">Product detail title</string>
    <string name="product_detail_price">Product detail price</string>
    <string name="product_detail_offer">Product detail offer</string>
    <string name="product_detail_desc">Product detail desc</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="add_cart_button">Add to Cart</string>
    <string name="cart_title_text">Shopping Cart</string>
    <string name="price_to_pay">Total price of your cart: </string>
    <string name="sample_amount">9.99</string>
    <string name="purchase">Purchase</string>
    <string name="go_back">Go back</string>
    <string name="cart_is_empty">Shopping cart is empty!</string>
    <string name="user_email">User Email</string>
    <string name="logout">Logout</string>
    <string name="userid_fetch_fail">Failed to get user id</string>
    <string name="user_email_title">You are logged in as…</string>
    <string name="favorites_title">Your Favorites</string>
    <string name="favorite_empty">You do not have \n any favorite products :(</string>
    <string name="capstone_project">Capstone project by Imregul Kurt</string>
</resources>