<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment" >

    <ImageView
        android:id="@+id/backgroundView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:alpha="0.1"
        android:background="@drawable/ic_background"
        android:contentDescription="@string/welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/topBarView3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/orange"
        android:contentDescription="@string/top_navigation_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appNameView4"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:contentDescription="@string/app_name_image"
        android:src="@drawable/ic_appname"
        app:layout_constraintBottom_toBottomOf="@+id/topBarView3"
        app:layout_constraintEnd_toEndOf="@+id/topBarView3"
        app:layout_constraintStart_toStartOf="@+id/topBarView3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="#00000000"
        android:contentDescription="@string/go_back"
        android:drawableTop="@drawable/ic_back"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="@+id/topBarView3"
        app:layout_constraintStart_toStartOf="@+id/topBarView3"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarView3"
        app:layout_constraintVertical_bias="0.0" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/productTitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/product_detail_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/productImageView2"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/welcome"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productTitle1"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/productPriceText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/product_detail_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productImageView2" />

            <TextView
                android:id="@+id/productOfferText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/product_detail_offer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productPriceText2" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_width="360dp"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:scaleX="1.01"
                android:scaleY="1.01"
                android:text="@string/product_detail_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productOfferText3" />

            <Button
                android:id="@+id/addCartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/orange"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/add_cart_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productDescription" />

            <ImageView
                android:id="@+id/errorIconView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:contentDescription="@string/welcome"
                android:scaleX="5"
                android:scaleY="5"
                android:src="@drawable/ic_error"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#FF5722" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:scaleX="2"
                android:scaleY="2"
                android:text="@string/an_error_occurred"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/errorIconView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar4"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>