<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout12"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.FavoriteFragment" >

    <ImageView
        android:id="@+id/backgroundView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:alpha="0.1"
        android:background="@drawable/ic_background"
        android:contentDescription="HomeScreenBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/topBarView2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/orange"
        android:contentDescription="@string/top_navigation_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appNameView3"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:contentDescription="@string/app_name_image"
        android:src="@drawable/ic_appname"
        app:layout_constraintBottom_toBottomOf="@+id/topBarView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/topBarView2"
        app:layout_constraintTop_toTopOf="@+id/backgroundView5" />

    <Button
        android:id="@+id/backButton3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="#00000000"
        android:contentDescription="@string/go_back"
        android:drawableTop="@drawable/ic_back"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="@+id/topBarView2"
        app:layout_constraintStart_toStartOf="@+id/topBarView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/favorites_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:itemCount="10"
        tools:listitem="@layout/item_favorite">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/errorIconView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cart_is_empty"
        android:scaleX="5"
        android:scaleY="5"
        android:src="@drawable/ic_broken_heart"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundView5"
        app:layout_constraintEnd_toEndOf="@+id/backgroundView5"
        app:layout_constraintStart_toStartOf="@+id/backgroundView5"
        app:layout_constraintTop_toTopOf="@+id/backgroundView5"
        app:layout_constraintVertical_bias="0.3"
        app:tint="#FF5722" />

    <TextView
        android:id="@+id/errorText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/favorite_empty"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorIconView4" />

    <ProgressBar
        android:id="@+id/progressBar7"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundView5" />
</androidx.constraintlayout.widget.ConstraintLayout>