<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payment.PaymentFragment" >

    <ImageView
        android:id="@+id/backgroundView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:alpha="0.1"
        android:background="@drawable/ic_background"
        android:contentDescription="HomeScreenBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/topBarView3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/orange"
        android:contentDescription="@string/top_navigation_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appNameView4"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:contentDescription="@string/app_name_image"
        android:src="@drawable/ic_appname"
        app:layout_constraintBottom_toBottomOf="@+id/topBarView3"
        app:layout_constraintEnd_toEndOf="@+id/topBarView3"
        app:layout_constraintStart_toStartOf="@+id/topBarView3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton9"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="#00000000"
        android:contentDescription="@string/go_back"
        android:drawableTop="@drawable/ic_back"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="@+id/topBarView3"
        app:layout_constraintStart_toStartOf="@+id/topBarView3"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>